# pytarkov

./: README.md  README.rst  setup.cfg
pytarkov/: __init__.py  pytarkov.py
