[metadata]
name = pytarkov
version = 1.1.1
author = matix
author_email = matixidk@gmail.com
description = An API wrapper for Tarkov-Market written in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matix2/pytarkov
project_urls =
    Bug Tracker = https://github.com/matix2/pytarkov/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
